# DualShock4_ESP32

./: LICENSE  README.md
btstack/: CMakeLists.txt
dualshock4/: CMakeLists.txt  Kconfig  READ.md  README.md  controller_commands.c  controller_commands.h  ds4.c  ds4.h  ds4_init.c  ds4_init.h  dualshock4.c  dualshock4.h  dualshock4_connection_status.c  dualshock4_connection_status.h  dualshock4_connection_status_modify.c  dualshock4_connection_status_modify.h  dualshock4_default_funcs.c  dualshock4_default_funcs.h  dualshock4_device_handle.c  dualshock4_device_handle.h  dualshock4_initializer.c  dualshock4_initializer.h  dualshock4_task_commands.c  dualshock4_task_commands.h  dualshock4_task_commands_control.h  idf_component.yml
dualshock4/controller_behaviour/: connection_status_modify.h  controller_behaviour.c  controller_behaviour.h
dualshock4/examples/basic/: CMakeLists.txt  main.c
dualshock4/examples/basic/main/: main.c
dualshock4/examples/events/: CMakeLists.txt  main.c  sdkconfig.defaults
dualshock4/examples/lightbar_and_rumble/: CMakeLists.txt  main.c  sdkconfig.defaults
dualshock4/examples/user_utility/: CMakeLists.txt  main.c
dualshock4/examples/user_utility/main/: CMakeLists.txt
dualshock4/include/: ds4_btn_events.h  ds4_btns.h  ds4_connection_status.h  ds4_receive_type.h
dualshock4/receive/: ds4_receive_type.h
dualshock4/receive/event_driven/: btn_config.h  btn_event_handling_settings.h  btn_event_masks.h  btn_events.c  btn_events.h  btns.h  ds4_btn_config.h  ds4_btn_event_handling_settings.h  ds4_event_handling.c  ds4_event_handling.h  ds4_event_handling_init.h  even_check_funcs.c  event_check_funcs.h  event_handling.c  event_handling.h
dualshock4/receive/polling/: controller_data_type.h  ds4_polling.h  polling.c
dualshock4/send/: controller_commands.c  controller_commands.h
dualshock4/util/: ds4_requirements.h
